--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -7,14 +7,13 @@
 
     {% include header.html %}
 
-    <div class="page-content">
-      <div class="wrapper">
-        {{ content }}
-      </div>
-    </div>
+    {% include navigation.html %}
+
+    <main>
+      {{ content }}
+    </main>
 
     {% include footer.html %}
-
   </body>
 
 </html>
