started layout styling

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,4 +1,8 @@
-<header class="site-header">
+<header>
+  <a class="header-link" href="#home">Home</a>
+</header>
+
+<!-- <header class="site-header">
 
   <div class="wrapper">
 
@@ -24,4 +28,4 @@
 
   </div>
 
-</header>
+</header> -->
