--- a/_includes/navigation.html
+++ b/_includes/navigation.html
@@ -1,11 +1,10 @@
 <nav class="nav">
   <ul class="nav-link-list">
-    <li class="nav-link-list-item active">Home</li>
-    <li class="nav-link-list-item">About</li>
-    <li class="nav-link-list-item">Library</li>
-    <li class="nav-link-list-item">Menu</li>
-    <li class="nav-link-list-item">Kickstarter</li>
-    <li class="nav-link-list-item">Contact</li>
-    <li class="nav-link-list-item">FAQ</li>
+    <li class="nav-link-list-item active"><a href="#about">About</a></li>
+    <li class="nav-link-list-item"><a href="#library">Library</a></li>
+    <li class="nav-link-list-item"><a href="#menu">Menu</a></li>
+    <li class="nav-link-list-item"><a href="#kickstarter">Kickstarter</a></li>
+    <li class="nav-link-list-item"><a href="#contact">Contact</a></li>
+    <li class="nav-link-list-item"><a href="#faq">FAQ</a></li>
   </ul>
 </nav>
