--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -1,3 +1,19 @@
+$light-tan: #FFF8E7;
+
+body{
+  font-family: "Libre Baserville", Georgia, serif;
+}
+
+h1{
+  font-size: 30px;
+}
+
+h2{
+  font-style: italic;
+  font-size: 24px;
+}
+
+
 //HEADER
 .header{
   position: fixed;
@@ -39,7 +55,8 @@
   width: 100%;
   min-height: 100%;
   height: 100vh;
-  background-color: #FFF8E7;
+  background-color: $light-tan;
+  overflow-x: hidden;
 
   &:after{ //clearfix
     visibility: hidden;
@@ -60,7 +77,7 @@
 
   &-left-image{
     margin: 0 auto;
-    width: 50%;
+    width: 80%;
 
     svg{
       height: 100%;
@@ -111,36 +128,55 @@
   }
 }
 
-
-//HOME
-.section-home{
-  background-image: url(/images/home.png);
+.section-home,
+.section-library,
+.section-kickstarter{
+  background-color: #372f36;
   background-repeat: no-repeat;
   background-position: center;
   background-size: cover;
+  color: $light-tan;
+}
+
+//HOME
+.section-home{
+  background-image: url(/images/home1440.png);
+
+  &-logo{
+    position: relative;
+    top: 4rem;
+    svg {
+      width: 60%;
+      display: block;
+      margin: 0 auto;
+      path{
+        fill: $light-tan;
+      }
+    }
+  }
 
   &-text{
     position: absolute;
     bottom: 18%;
     left: 6%;
+    max-width: 60%;
   }
+}
+
+//ABOUT
+.logo-svg{
+  fill: white;
 }
 
 //LIBRARY
 .section-library{
-  background-image: url(/images/library.png);
-  background-repeat: no-repeat;
-  background-position: center;
-  background-size: cover;
+  background-image: url(/images/library1440.png);
   background-attachment: fixed;
 }
 
 //KICKSTARTER
 .section-kickstarter{
-  background-image: url(/images/kickstarter.png);
-  background-repeat: no-repeat;
-  background-position: center;
-  background-size: cover;
+  background-image: url(/images/kickstarter1440.png);
   background-attachment: fixed;
 }
 
@@ -161,7 +197,7 @@
   position: relative;
   padding: 24px 16px;
   display: flex;
-  margin: 48px 0px;
+  margin: 48px auto;
 
   &-image{
     flex: 0 0 30%;
@@ -175,10 +211,6 @@
     max-width: 1200px;
     margin: 0 auto;
     padding: 48px 0;
-  }
-
-  &:nth-child(even){
-    left: 30%;
   }
 }
 
