--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,6 +1,6 @@
-<header class="header">
+<!-- <header class="header">
   <a class="header-link" href="#home">Home</a>
-</header>
+</header> -->
 
 <!-- <header class="site-header">
 
