--- a/_includes/navigation.html
+++ b/_includes/navigation.html
@@ -1,6 +1,7 @@
 <nav class="nav">
   <ul class="nav-link-list">
-    <li class="nav-link-list-item active"><a href="#about">About</a></li>
+    <li class="nav-link-list-item active"><a href="#home">Home</a></li>
+    <li class="nav-link-list-item"><a href="#about">About</a></li>
     <li class="nav-link-list-item"><a href="#library">Library</a></li>
     <li class="nav-link-list-item"><a href="#menu">Menu</a></li>
     <li class="nav-link-list-item"><a href="#kickstarter">Kickstarter</a></li>
