added animations; styled buttons

--- a/_includes/scripts.html
+++ b/_includes/scripts.html
@@ -17,7 +17,9 @@ $(function() {
 
 //navigation link selection
 
+</script>
 
+<script>
 //illustration animations on scroll
-
+AOS.init();
 </script>
