--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -1,4 +1,5 @@
 $light-tan: #FFF8E7;
+$dark-tan: #ebd9bc;
 $dark-brown: #241300;
 $dark-brown80: rgba(36, 19, 0, .8);
 $dark-brown20: rgba(36, 19, 0, .2);
@@ -35,7 +36,35 @@ h2{
   }
 }
 
-//LINKS
+//BUTTONS
+button{
+  display: inline-block;
+  background-color: transparent;
+  border-left: none;
+  border-right: none;
+  border-top: 6px double $gold;
+  border-bottom: 6px double $gold;
+  font-size: 20px;
+  padding: 8px 16px;
+  font-weight: normal;
+  font-family: "Libre Baserville", Georgia, serif;
+  color: $gold;
+  text-transform: uppercase;
+  letter-spacing: .08em;
+  cursor: pointer;
+  outline: none;
+
+  &:hover,
+  &:focus{
+    border-color: $dark-brown;
+    color: $dark-brown;
+    font-style: italic;
+  }
+
+  &:active{
+    opacity: .5;
+  }
+}
 
 
 //NAVIGATION
@@ -54,11 +83,11 @@ h2{
     &-item{
       text-align: right;
       margin: 8px 0px;
-      &.active{
-        font-size: 110%;
-        font-weight: bold;
-        padding-right: 20px;
-      }
+      // &.active{
+      //   font-size: 110%;
+      //   font-weight: bold;
+      //   padding-right: 20px;
+      // }
     }
   }
 
@@ -101,7 +130,7 @@ h2{
   }
 
   &-left{
-    background-color: white;
+    background-color: $dark-tan;
     background-image:url(/images/paper1440.png);
     background-repeat: no-repeat;
     background-position: bottom;
@@ -117,6 +146,7 @@ h2{
       height: 100%;
       width: 100%;
       max-height: 80vh;
+      opacity: .8;
     }
   }
 
