--- a/css/main.scss
+++ b/css/main.scss
@@ -47,6 +47,7 @@ $on-laptop:        800px;
 
 // Import partials from `sass_dir` (defaults to `_sass`)
 @import
+        "../bower_components/bourbon/app/assets/stylesheets/bourbon",
         "base",
         "layout"
 ;
