started using absolutely responsive images; working on getting srcset to work

--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -273,8 +273,29 @@ button{
 //LIBRARY
 .section-library{
   background-color: $light-tan;
-  background-image: url(/images/library1440.png);
-  background-attachment: fixed;
+  position: relative;
+  // background-image: url(/images/library1440.png);
+  // background-attachment: fixed;
+}
+
+.section-bg-img{ //absolutely responsive background images
+  position: absolute;
+  overflow: hidden;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+
+  img{
+    @include transform(translateX(-50%));
+    left: 50%;
+    position: absolute;
+    top: 0;
+    bottom: 0;
+    min-width: 100%;
+    min-height: 100%;
+    overflow: hidden;
+  }
 }
 
 //KICKSTARTER
@@ -334,154 +355,154 @@ button{
     padding: 48px 120px;
   }
 }
-@media (max-width:670px){
-  .faq-card{
-    @include flex-wrap(wrap);
-    padding: 1rem;
-
-    &-list{
-      padding-top: 0px;
-    }
-
-    &-image{
-      @include flex(0 0 100%);
-      margin-bottom: 3rem;
-      max-height: 30vh;
-      svg{
-        max-height: 30vh;
-      }
-    }
-    &-text{
-      @include flex(0 0 100%);
-    }
-  }
-
-  .section-left .section-left-image{
-    width: 90%;
-    margin-bottom: 2rem;
-  }
-}
-
-@media (max-width:768px) {
-  h1{
-    font-size: 1.5em;
-  }
-
-  h2{
-    font-size: 1.25em
-  }
-  .section-home{
-    background-image: url(/images/home768.png);
-  }
-  .section-library{
-    background-image: url(/images/library768.png);
-  }
-  .section-kickstarter{
-    background-image: url(/images/kickstarter768.png);
-  }
-
-  .section-left{
-    background-color: $light-tan;
-    background-image: none;
-    box-shadow: none;
-    &-image{
-      width: 60%;
-      margin-bottom: 4rem;
-    }
-  }
-
-  .section-left,
-  .section-right{
-    width: 100%;
-    float: none;
-    height: auto !important;
-  }
-
-  .section{
-    @include display(flex);
-    @include justify-content(center);
-    @include flex-flow(column);
-
-    &-home{
-      display: block;
-    }
-
-    &-text{
-      left: 0;
-      margin: 0 auto;
-      width: 80%;
-    }
-    &-full-text{
-      left: 0;
-      width: 80%;
-      margin: 0 auto;
-    }
-    &-faq{
-      padding-top: 4rem;
-    }
-  }
-
-  .faq-card{
-    background-image: none;
-    background-color: $light-tan;
-    box-shadow: none;
-    &-list{
-      padding-left: 1rem;
-      padding-right: 1rem;
-    }
-  }
-}
-
-@media (max-width:1024px){
-  .section-library{
-    background-attachment: inherit;
-  }
-  .section-kickstarter{
-    background-attachment: inherit;
-  }
-}
-
-@media (min-width:769px) and (max-width:1024px) {
-  .section-home{
-    background-image: url(/images/home1024.png);
-  }
-  .section-library{
-    background-image: url(/images/library1024.png);
-  }
-  .section-kickstarter{
-    background-image: url(/images/kickstarter1024.png);
-  }
-  .section-left{
-    background-image:url(/images/paper1024.png);
-  }
-}
-
-@media (min-width:1025px) and (max-width:1440px) {
-  .section-home{
-    background-image: url(/images/home1440.png);
-  }
-  .section-library{
-    background-image: url(/images/library1440.png);
-  }
-  .section-kickstarter{
-    background-image: url(/images/kickstarter1440.png);
-  }
-  .section-left{
-    background-image:url(/images/paper1440.png);
-  }
-}
-
-@media (min-width:1441px) {
-  .section-home{
-    background-image: url(/images/home1920.png);
-  }
-  .section-library{
-    background-image: url(/images/library1920.png);
-  }
-  .section-kickstarter{
-    background-image: url(/images/kickstarter1920.png);
-  }
-  .section-left{
-    background-image:url(/images/paper1920.png);
-  }
-}
+// @media (max-width:670px){
+//   .faq-card{
+//     @include flex-wrap(wrap);
+//     padding: 1rem;
+//
+//     &-list{
+//       padding-top: 0px;
+//     }
+//
+//     &-image{
+//       @include flex(0 0 100%);
+//       margin-bottom: 3rem;
+//       max-height: 30vh;
+//       svg{
+//         max-height: 30vh;
+//       }
+//     }
+//     &-text{
+//       @include flex(0 0 100%);
+//     }
+//   }
+//
+//   .section-left .section-left-image{
+//     width: 90%;
+//     margin-bottom: 2rem;
+//   }
+// }
+//
+// @media (max-width:768px) {
+//   h1{
+//     font-size: 1.5em;
+//   }
+//
+//   h2{
+//     font-size: 1.25em
+//   }
+//   .section-home{
+//     background-image: url(/images/home768.png);
+//   }
+//   .section-library{
+//     background-image: url(/images/library768.png);
+//   }
+//   .section-kickstarter{
+//     background-image: url(/images/kickstarter768.png);
+//   }
+//
+//   .section-left{
+//     background-color: $light-tan;
+//     background-image: none;
+//     box-shadow: none;
+//     &-image{
+//       width: 60%;
+//       margin-bottom: 4rem;
+//     }
+//   }
+//
+//   .section-left,
+//   .section-right{
+//     width: 100%;
+//     float: none;
+//     height: auto !important;
+//   }
+//
+//   .section{
+//     @include display(flex);
+//     @include justify-content(center);
+//     @include flex-flow(column);
+//
+//     &-home{
+//       display: block;
+//     }
+//
+//     &-text{
+//       left: 0;
+//       margin: 0 auto;
+//       width: 80%;
+//     }
+//     &-full-text{
+//       left: 0;
+//       width: 80%;
+//       margin: 0 auto;
+//     }
+//     &-faq{
+//       padding-top: 4rem;
+//     }
+//   }
+//
+//   .faq-card{
+//     background-image: none;
+//     background-color: $light-tan;
+//     box-shadow: none;
+//     &-list{
+//       padding-left: 1rem;
+//       padding-right: 1rem;
+//     }
+//   }
+// }
+//
+// @media (max-width:1024px){
+//   .section-library{
+//     background-attachment: inherit;
+//   }
+//   .section-kickstarter{
+//     background-attachment: inherit;
+//   }
+// }
+//
+// @media (min-width:769px) and (max-width:1024px) {
+//   .section-home{
+//     background-image: url(/images/home1024.png);
+//   }
+//   .section-library{
+//     background-image: url(/images/library1024.png);
+//   }
+//   .section-kickstarter{
+//     background-image: url(/images/kickstarter1024.png);
+//   }
+//   .section-left{
+//     background-image:url(/images/paper1024.png);
+//   }
+// }
+//
+// @media (min-width:1025px) and (max-width:1440px) {
+//   .section-home{
+//     background-image: url(/images/home1440.png);
+//   }
+//   .section-library{
+//     background-image: url(/images/library1440.png);
+//   }
+//   .section-kickstarter{
+//     background-image: url(/images/kickstarter1440.png);
+//   }
+//   .section-left{
+//     background-image:url(/images/paper1440.png);
+//   }
+// }
+//
+// @media (min-width:1441px) {
+//   .section-home{
+//     background-image: url(/images/home1920.png);
+//   }
+//   .section-library{
+//     background-image: url(/images/library1920.png);
+//   }
+//   .section-kickstarter{
+//     background-image: url(/images/kickstarter1920.png);
+//   }
+//   .section-left{
+//     background-image:url(/images/paper1920.png);
+//   }
+// }
