--- a/css/main.scss
+++ b/css/main.scss
@@ -8,5 +8,11 @@
         "../bower_components/bourbon/app/assets/stylesheets/bourbon",
         "variables",
         "base",
-        "layout"
+        "layout",
+        "components/buttons",
+        "components/header",
+        "components/links",
+        "components/nav",
+        "components/sections",
+        "media-queries"
 ;
