--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -89,6 +89,7 @@ button{
   height: 100vh;
   background-color: $light-tan;
   overflow-x: hidden;
+  position: relative;
 
   &:after{ //clearfix
     visibility: hidden;
@@ -175,14 +176,10 @@ button{
 .section-library,
 .section-kickstarter{
   background-color: $dark-brown;
-  background-repeat: no-repeat;
-  background-position: center;
-  background-size: cover;
 }
 
 //HOME
 .section-home{
-  background-image: url(/images/home1440.png);
   color: $light-tan;
   position: relative;
 
@@ -273,9 +270,6 @@ button{
 //LIBRARY
 .section-library{
   background-color: $light-tan;
-  position: relative;
-  // background-image: url(/images/library1440.png);
-  // background-attachment: fixed;
 }
 
 .section-bg-img{ //absolutely responsive background images
@@ -300,8 +294,6 @@ button{
 
 //KICKSTARTER
 .section-kickstarter{
-  background-image: url(/images/kickstarter1440.png);
-  background-attachment: fixed;
   color: $light-tan;
 }
 
@@ -355,154 +347,109 @@ button{
     padding: 48px 120px;
   }
 }
-// @media (max-width:670px){
-//   .faq-card{
-//     @include flex-wrap(wrap);
-//     padding: 1rem;
-//
-//     &-list{
-//       padding-top: 0px;
-//     }
-//
-//     &-image{
-//       @include flex(0 0 100%);
-//       margin-bottom: 3rem;
-//       max-height: 30vh;
-//       svg{
-//         max-height: 30vh;
-//       }
-//     }
-//     &-text{
-//       @include flex(0 0 100%);
-//     }
-//   }
-//
-//   .section-left .section-left-image{
-//     width: 90%;
-//     margin-bottom: 2rem;
-//   }
-// }
-//
-// @media (max-width:768px) {
-//   h1{
-//     font-size: 1.5em;
-//   }
-//
-//   h2{
-//     font-size: 1.25em
-//   }
-//   .section-home{
-//     background-image: url(/images/home768.png);
-//   }
-//   .section-library{
-//     background-image: url(/images/library768.png);
-//   }
-//   .section-kickstarter{
-//     background-image: url(/images/kickstarter768.png);
-//   }
-//
-//   .section-left{
-//     background-color: $light-tan;
-//     background-image: none;
-//     box-shadow: none;
-//     &-image{
-//       width: 60%;
-//       margin-bottom: 4rem;
-//     }
-//   }
-//
-//   .section-left,
-//   .section-right{
-//     width: 100%;
-//     float: none;
-//     height: auto !important;
-//   }
-//
-//   .section{
-//     @include display(flex);
-//     @include justify-content(center);
-//     @include flex-flow(column);
-//
-//     &-home{
-//       display: block;
-//     }
-//
-//     &-text{
-//       left: 0;
-//       margin: 0 auto;
-//       width: 80%;
-//     }
-//     &-full-text{
-//       left: 0;
-//       width: 80%;
-//       margin: 0 auto;
-//     }
-//     &-faq{
-//       padding-top: 4rem;
-//     }
-//   }
-//
-//   .faq-card{
-//     background-image: none;
-//     background-color: $light-tan;
-//     box-shadow: none;
-//     &-list{
-//       padding-left: 1rem;
-//       padding-right: 1rem;
-//     }
-//   }
-// }
-//
-// @media (max-width:1024px){
-//   .section-library{
-//     background-attachment: inherit;
-//   }
-//   .section-kickstarter{
-//     background-attachment: inherit;
-//   }
-// }
-//
-// @media (min-width:769px) and (max-width:1024px) {
-//   .section-home{
-//     background-image: url(/images/home1024.png);
-//   }
-//   .section-library{
-//     background-image: url(/images/library1024.png);
-//   }
-//   .section-kickstarter{
-//     background-image: url(/images/kickstarter1024.png);
-//   }
-//   .section-left{
-//     background-image:url(/images/paper1024.png);
-//   }
-// }
-//
-// @media (min-width:1025px) and (max-width:1440px) {
-//   .section-home{
-//     background-image: url(/images/home1440.png);
-//   }
-//   .section-library{
-//     background-image: url(/images/library1440.png);
-//   }
-//   .section-kickstarter{
-//     background-image: url(/images/kickstarter1440.png);
-//   }
-//   .section-left{
-//     background-image:url(/images/paper1440.png);
-//   }
-// }
-//
-// @media (min-width:1441px) {
-//   .section-home{
-//     background-image: url(/images/home1920.png);
-//   }
-//   .section-library{
-//     background-image: url(/images/library1920.png);
-//   }
-//   .section-kickstarter{
-//     background-image: url(/images/kickstarter1920.png);
-//   }
-//   .section-left{
-//     background-image:url(/images/paper1920.png);
-//   }
-// }
+@media (max-width:670px){
+  .faq-card{
+    @include flex-wrap(wrap);
+    padding: 1rem;
+
+    &-list{
+      padding-top: 0px;
+    }
+
+    &-image{
+      @include flex(0 0 100%);
+      margin-bottom: 3rem;
+      max-height: 30vh;
+      svg{
+        max-height: 30vh;
+      }
+    }
+    &-text{
+      @include flex(0 0 100%);
+    }
+  }
+
+  .section-left .section-left-image{
+    width: 90%;
+    margin-bottom: 2rem;
+  }
+}
+
+@media (max-width:768px) {
+  h1{
+    font-size: 1.5em;
+  }
+
+  h2{
+    font-size: 1.25em
+  }
+
+  .section-left{
+    background-color: $light-tan;
+    background-image: none;
+    box-shadow: none;
+    &-image{
+      width: 60%;
+      margin-bottom: 4rem;
+    }
+  }
+
+  .section-left,
+  .section-right{
+    width: 100%;
+    float: none;
+    height: auto !important;
+  }
+
+  .section{
+    @include display(flex);
+    @include justify-content(center);
+    @include flex-flow(column);
+
+    &-home{
+      display: block;
+    }
+
+    &-text{
+      left: 0;
+      margin: 0 auto;
+      width: 80%;
+    }
+    &-full-text{
+      left: 0;
+      width: 80%;
+      margin: 0 auto;
+    }
+    &-faq{
+      padding-top: 4rem;
+    }
+  }
+
+  .faq-card{
+    background-image: none;
+    background-color: $light-tan;
+    box-shadow: none;
+    &-list{
+      padding-left: 1rem;
+      padding-right: 1rem;
+    }
+  }
+}
+
+@media (min-width:769px) and (max-width:1024px) {
+  .section-left{
+    background-image:url(/images/paper1024.png);
+  }
+}
+
+@media (min-width:1025px) and (max-width:1440px) {
+  .section-left{
+    background-image:url(/images/paper1440.png);
+  }
+}
+
+@media (min-width:1441px) {
+  .section-left{
+    background-image:url(/images/paper1920.png);
+  }
+}
