changed fonts; added more navigation styling

--- a/_includes/navigation.html
+++ b/_includes/navigation.html
@@ -1,11 +1,32 @@
 <nav class="nav">
   <ul class="nav-link-list">
-    <li class="nav-link-list-item active"><a href="#home">Home</a></li>
-    <li class="nav-link-list-item"><a href="#about">About</a></li>
-    <li class="nav-link-list-item"><a href="#library">Library</a></li>
-    <li class="nav-link-list-item"><a href="#menu">Menu</a></li>
-    <li class="nav-link-list-item"><a href="#kickstarter">Kickstarter</a></li>
-    <li class="nav-link-list-item"><a href="#contact">Contact</a></li>
-    <li class="nav-link-list-item"><a href="#faq">FAQ</a></li>
+    <li class="nav-link-list-item">
+      <a href="#home">Home</a>
+      <div class="nav-link-list-item-indicator"></div>
+    </li>
+    <li class="nav-link-list-item">
+      <a href="#about">About</a>
+      <div class="nav-link-list-item-indicator"></div>
+    </li>
+    <li class="nav-link-list-item">
+      <a href="#library">Library</a>
+      <div class="nav-link-list-item-indicator"></div>
+    </li>
+    <li class="nav-link-list-item">
+      <a href="#menu">Menu</a>
+      <div class="nav-link-list-item-indicator"></div>
+    </li>
+    <li class="nav-link-list-item">
+      <a href="#kickstarter">Kickstarter</a>
+      <div class="nav-link-list-item-indicator"></div>
+    </li>
+    <li class="nav-link-list-item">
+      <a href="#contact">Contact</a>
+      <div class="nav-link-list-item-indicator"></div>
+    </li>
+    <li class="nav-link-list-item">
+      <a href="#faq">FAQ</a>
+      <div class="nav-link-list-item-indicator"></div>
+    </li>
   </ul>
 </nav>
