--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -26,17 +26,20 @@ body {
 }
 
 h1,
-h2{
+h2,
+button,
+nav{
+  font-family: $display-font-family;
   font-weight: normal;
 }
 
 h1{
-  font-size: 2em;
+  font-size: 2.5em;
   line-height: 1.2;
   margin-bottom: .5rem;
 }
 
 h2{
   font-style: italic;
-  font-size: 1.5em;
+  font-size: 2em;
 }
