--- a/_sass/_variables.scss
+++ b/_sass/_variables.scss
@@ -1,9 +1,10 @@
 // Our variables
-$base-font-family: "Libre Baserville", Georgia, serif;
+$base-font-family: Georgia, serif;
 $base-font-size:   16px;
 $base-font-weight: normal;
 $small-font-size:  $base-font-size * 0.875;
 $base-line-height: 1.5;
+$display-font-family: "IM Fell Double Pica", Georgia, serif;
 
 
 //COLORS
