added navigation javascript so that the correct link is selected when the user is in that section

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,6 +1,8 @@
-<!-- <header class="header">
-  <a class="header-link" href="#home">Home</a>
-</header> -->
+<header class="header">
+  <a class="header-link" href="#section1">Home
+    <span>{% include header-logo.svg %}</span>
+  </a>
+</header>
 
 <!-- <header class="site-header">
 
