--- a/_includes/navigation.html
+++ b/_includes/navigation.html
@@ -1,31 +1,31 @@
-<nav class="nav">
+<nav class="nav" id="cd-vertical-nav">
   <ul class="nav-link-list">
     <li class="nav-link-list-item">
-      <a href="#home">Home</a>
+      <a href="#section1" data-number="1">Home</a>
       <div class="nav-link-list-item-indicator"></div>
     </li>
     <li class="nav-link-list-item">
-      <a href="#about">About</a>
+      <a href="#section2" data-number="2">About</a>
       <div class="nav-link-list-item-indicator"></div>
     </li>
     <li class="nav-link-list-item">
-      <a href="#library">Library</a>
+      <a href="#section3" data-number="3">Library</a>
       <div class="nav-link-list-item-indicator"></div>
     </li>
     <li class="nav-link-list-item">
-      <a href="#menu">Menu</a>
+      <a href="#section4" data-number="4">Menu</a>
       <div class="nav-link-list-item-indicator"></div>
     </li>
     <li class="nav-link-list-item">
-      <a href="#kickstarter">Kickstarter</a>
+      <a href="#section5" data-number="5">Kickstarter</a>
       <div class="nav-link-list-item-indicator"></div>
     </li>
     <li class="nav-link-list-item">
-      <a href="#contact">Contact</a>
+      <a href="#section6" data-number="6">Contact</a>
       <div class="nav-link-list-item-indicator"></div>
     </li>
     <li class="nav-link-list-item">
-      <a href="#faq">FAQ</a>
+      <a href="#section7" data-number="7">FAQ</a>
       <div class="nav-link-list-item-indicator"></div>
     </li>
   </ul>
