--- a/_includes/head.html
+++ b/_includes/head.html
@@ -12,4 +12,5 @@
 
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
   <script src="https://cdn.rawgit.com/michalsnik/aos/2.0.4/dist/aos.js"></script>
+  <script src="js/nav.js"></script>
 </head>
