--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -1,116 +1,3 @@
-//HEADER
-.header{
-  position: fixed;
-  top: 16px;
-  right: 16px;
-
-  &-link{
-    display: block;
-    text-indent: -9999px;
-    background-color: red;
-    height: 40px;
-    width: 40px;
-  }
-}
-
-//BUTTONS
-button{
-  display: inline-block;
-  background-color: transparent;
-  border-left: none;
-  border-right: none;
-  border-top: 6px double $gold;
-  border-bottom: 6px double $gold;
-  font-size: 1.25em;
-  padding: 8px 16px;
-  color: $gold;
-  text-transform: uppercase;
-  letter-spacing: .08em;
-  cursor: pointer;
-  outline: none;
-
-  &:hover,
-  &:focus{
-    opacity: .5;
-  }
-
-  &:active{
-    border-color: $dark-brown;
-    color: $dark-brown;
-  }
-}
-
-
-//NAVIGATION
-.nav{
-  @include display(flex);
-  @include align-items(center);
-  position: fixed;
-  height: 100vh;
-  right: 16px;
-  z-index: 100;
-
-  &-link-list{
-    @include flex(1 1 auto);
-    list-style: none;
-
-    &-item{
-      text-align: right;
-      margin: 8px 0px;
-      position: relative;
-      height: 24px;
-
-      a{
-        vertical-align: middle;
-      }
-
-      &.active{
-        font-size: 120%;
-        font-weight: bold;
-        padding-right: 4px;
-
-        .nav-link-list-item-indicator{
-          top: 8px;
-          background-color: transparent;
-          opacity: 1;
-          width: 0;
-          height: 0;
-          border-style: solid;
-          border-width: 8px 16px 8px 0;
-          border-color: transparent $gold transparent transparent;
-        }
-      }
-
-      &-indicator{
-        @include transition(all ease 300ms);
-        position: absolute;
-        right: -16px;
-        top: 14px;
-        display: inline-block;
-        width: 12px;
-        height: 2px;
-        background-color: $gold;
-        opacity: .5;
-      }
-    }
-  }
-
-  a {
-    @include transition(all ease 300ms);
-    color: $gold;
-    text-decoration: none;
-
-    &:hover,
-    &:focus {
-      font-size: 110%;
-      font-weight: bold;
-      margin-top: 6px;
-      margin-bottom: 6px;
-    }
-  }
-}
-
-//SECTIONS
 .section{
   display: block;
   width: 100%;
@@ -190,6 +77,7 @@ button{
     margin: 0 auto;
     text-align: center;
     height: 100%;
+    padding: 24px;
 
     &-text{
       margin: 0 auto;
@@ -199,286 +87,24 @@ button{
       }
     }
   }
-}
 
-.section-home,
-.section-library,
-.section-kickstarter{
-  background-color: $dark-brown;
-}
-
-//HOME
-.section-home{
-  color: $light-tan;
-  position: relative;
-
-  &-logo{
-    position: relative;
-    top: 16%;
-
-    svg {
-      width: 60%;
-      display: block;
-      margin: 0 auto;
-      max-height: 40vh;
-      path{
-        fill: $light-tan;
-      }
-    }
-  }
-
-  &-text{
+  &-bg-img{ //absolutely responsive background images
     position: absolute;
-    bottom: 16%;
-    left: 6%;
-    max-width: 50%;
-
-    button{
-      margin-top: 1.5rem;
-    }
-  }
-}
-
-.scroll-pointer{
-  @include transform(translateX(-50%));
-  position: absolute;
-  display: block;
-  left: 50%;
-  bottom: 16px;
-  opacity: .5;
-  text-decoration: none;
-  color: $light-tan;
-
-  &:hover{
-    opacity: 1;
-  }
-
-  svg{
-    display: block;
-    width: 24px;
-    height: 100%;
-    margin: 0 auto;
-  }
-
-  &-text{
-    text-align: center;
-    font-style: italic;
-  }
-}
-
-.finger-svg{
-  fill: $light-tan;
-}
-
-//ABOUT
-.section-contact{
-  .section-left{
-    height: 99%;
-  }
-
-  &-links{
-    list-style: none;
-    li{
-      margin: 1rem 0;
-    }
-    a{
-      text-decoration: none;
-      color: $dark-brown80;
-      font-style: italic;
-      font-weight: bold;
-
-      &:hover,
-      &:focus{
-        text-decoration: underline;
-        color: $gold;
-      }
-    }
-  }
-}
-
-//LIBRARY
-.section-library{
-  background-color: $light-tan;
-}
-
-.section-bg-img{ //absolutely responsive background images
-  position: absolute;
-  overflow: hidden;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100%;
-
-  img{
-    @include transform(translateX(-50%));
-    left: 50%;
-    position: absolute;
-    top: 0;
-    bottom: 0;
-    min-width: 100%;
-    min-height: 100%;
     overflow: hidden;
-  }
-}
-
-//KICKSTARTER
-.section-kickstarter{
-  color: $light-tan;
-}
-
-//FAQ
-.section-faq{
-  height: auto;
-  padding-top: 96px;
-  padding-bottom: 48px;
-
-  h1{
-    text-align: center;
-  }
-}
-
-.faq-card{
-  @include display(flex);
-  @include align-items(center);
-  background: white;
-  background-image:url(/images/paper-card.png);
-  background-repeat: no-repeat;
-  background-position: top;
-  background-size: cover;
-  position: relative;
-  padding: 1.5rem 2rem 1.5rem 1rem;
-  margin: 4rem auto;
-  box-shadow: 1px 1px 2px 2px $dark-brown20;
-
-  &-image{
-    @include flex(0 0 30%);
+    top: 0;
+    left: 0;
+    width: 100%;
     height: 100%;
 
-    svg{
-      display: block;
-      max-height: 100%;
-      width: 90%;
-      margin: 0 auto;
-      opacity: .75;
+    img{
+      @include transform(translateX(-50%));
+      left: 50%;
+      position: absolute;
+      top: 0;
+      bottom: 0;
+      min-width: 100%;
+      min-height: 100%;
+      overflow: hidden;
     }
-  }
-
-  &-text{
-    @include flex(1 1 auto);
-    h2{
-      margin-bottom: 1rem;
-    }
-  }
-
-  &-list{
-    max-width: 1000px;
-    margin: 0 auto;
-    padding: 48px 120px;
-  }
-}
-@media (max-width:670px){
-  .faq-card{
-    @include flex-wrap(wrap);
-    padding: 1rem;
-
-    &-list{
-      padding-top: 0px;
-    }
-
-    &-image{
-      @include flex(0 0 100%);
-      margin-bottom: 3rem;
-      max-height: 30vh;
-      svg{
-        max-height: 30vh;
-      }
-    }
-    &-text{
-      @include flex(0 0 100%);
-    }
-  }
-
-  .section-left .section-left-image{
-    width: 90%;
-    margin-bottom: 2rem;
-  }
-}
-
-@media (max-width:768px) {
-  h1{
-    font-size: 2em;
-  }
-
-  h2{
-    font-size: 1.5em
-  }
-
-  .section-left{
-    background-color: $light-tan;
-    background-image: none;
-    box-shadow: none;
-    &-image{
-      width: 60%;
-      margin-bottom: 4rem;
-    }
-  }
-
-  .section-left,
-  .section-right{
-    width: 100%;
-    float: none;
-    height: auto !important;
-  }
-
-  .section{
-    @include display(flex);
-    @include justify-content(center);
-    @include flex-flow(column);
-
-    &-home{
-      display: block;
-    }
-
-    &-text{
-      left: 0;
-      margin: 0 auto;
-      width: 80%;
-    }
-    &-full-text{
-      left: 0;
-      width: 80%;
-      margin: 0 auto;
-    }
-    &-faq{
-      padding-top: 4rem;
-    }
-  }
-
-  .faq-card{
-    background-image: none;
-    background-color: $light-tan;
-    box-shadow: none;
-    &-list{
-      padding-left: 1rem;
-      padding-right: 1rem;
-    }
-  }
-}
-
-@media (min-width:769px) and (max-width:1024px) {
-  .section-left{
-    background-image:url(/images/paper1024.png);
-  }
-}
-
-@media (min-width:1025px) and (max-width:1440px) {
-  .section-left{
-    background-image:url(/images/paper1440.png);
-  }
-}
-
-@media (min-width:1441px) {
-  .section-left{
-    background-image:url(/images/paper1920.png);
   }
 }
