--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -2,7 +2,7 @@
   display: block;
   width: 100%;
   min-height: 100%;
-  height: 100vh;
+  min-height: 100vh;
   background-color: $light-tan;
   overflow-x: hidden;
   position: relative;
@@ -19,7 +19,8 @@
   &-left,
   &-right{
     width: 50%;
-    height: 100%;
+    min-height: 100%;
+    min-height: 100vh;
     display: inline-block;
     float: left;
   }
@@ -37,6 +38,8 @@
     margin: 0 auto;
     width: 95%;
     opacity: .8;
+    padding: 2rem 0;
+
     svg{
       height: 100%;
       width: 100%;
@@ -49,6 +52,7 @@
     @include display(flex);
     @include align-items(center);
     height: 100%;
+    min-height: 100vh;
   }
 
   &-text{
@@ -56,12 +60,14 @@
     position: relative;
     left: 10%;
     width: 60%;
+    padding-bottom: 2rem;
   }
 
   &-full{
     @include display(flex);
     @include align-items(center);
     height: 100%;
+    min-height: 100vh;
 
     &-text{
       flex: 0 1 auto;
@@ -78,6 +84,7 @@
     text-align: center;
     height: 100%;
     padding: 24px;
+    min-height: 100vh;
 
     &-text{
       margin: 0 auto;
