--- a/_sass/_media-queries.scss
+++ b/_sass/_media-queries.scss
@@ -53,7 +53,12 @@
   .section-right{
     width: 100%;
     float: none;
-    height: auto !important;
+    min-height: 100%;
+  }
+
+  .section-content,
+  .section-full{
+    min-height: 100%;
   }
 
   .section{
@@ -106,11 +111,6 @@
       padding-left: 1rem;
       padding-right: 1rem;
     }
-  }
-
-  .nav{
-    display: none;
-    visibility: hidden;
   }
 }
 
