--- a/_sass/components/_nav.scss
+++ b/_sass/components/_nav.scss
@@ -3,8 +3,22 @@
   @include align-items(center);
   position: fixed;
   height: 100vh;
-  right: 24px;
+  right: 1.5rem;
   z-index: 100;
+
+  &-menu-icon{
+    top: 1.5rem;
+    right: 1rem;
+    position: fixed;
+    width: 24px;
+    height: 2px;
+    display: none;
+    z-index: 120;
+
+    &:hover{
+      cursor: pointer;
+    }
+  }
 
   &-link-list{
     @include flex(1 1 auto);
@@ -12,9 +26,9 @@
 
     &-item{
       text-align: right;
-      margin: 8px 0px;
+      margin: .5rem 0px;
       position: relative;
-      height: 24px;
+      height: 1.5rem;
 
       a{
         font-size: 80%;
@@ -35,21 +49,21 @@
         &:after{
           content: "";
           position: absolute;
-          right: -24px;
+          right: -1.5rem;
           top: 4px;
           background-color: transparent;
           opacity: 1;
           width: 0;
           height: 0;
-          border-top: 8px solid transparent;
-          border-bottom: 8px solid transparent;
-          border-right:24px solid $gold;
+          border-top: .5rem solid transparent;
+          border-bottom: .5rem solid transparent;
+          border-right:1.5rem solid $gold;
         }
       }
 
       &-indicator{
         position: absolute;
-        right: -24px;
+        right: -1.5rem;
         top: 12px;
         display: inline-block;
         width: 16px;
@@ -71,6 +85,128 @@
       font-weight: bold;
       margin-top: 6px;
       margin-bottom: 6px;
+    }
+  }
+}
+
+@media (max-width: 1023px){
+  .nav{
+    @include transform(translateY(-100%));
+    @include transition(transform ease 300ms);
+    background-color: $dark-brown80;
+    width: 100%;
+    left:0;
+    bottom: 0;
+    right: 0;
+
+    &-link-list-item{
+      text-align: center;
+      height: auto;
+
+      a{
+        font-size: 6vh;
+        &:hover,
+        &:focus{
+          font-size: 6vh;
+        }
+      }
+
+      a.is-selected{
+        font-size: 6vh;
+        padding-right: 0;
+        font-style: italic;
+
+        &:hover,
+        &:focus{
+          font-size: 6vh;
+        }
+
+        &:before,
+        &:after{
+          @include transform(translateY(-50%));
+          content: "";
+          position: absolute;
+          top: 50%;
+          background-color: transparent;
+          opacity: 1;
+          width: 0;
+          height: 0;
+          border-top: .25rem solid transparent;
+          border-bottom: .25rem solid transparent;
+        }
+
+        &:before{
+          left: -3rem;
+          border-right:2rem solid $gold;
+        }
+
+        &:after{
+          right: -3rem;
+          border-left: 2rem solid $gold;
+          border-right: none;
+        }
+      }
+
+      &-indicator{
+        display: none;
+        visibility: hidden;
+      }
+    }
+
+    &-menu-icon {
+      @include transition(background-color .3s);
+  		/* this span is the central line of the menu icon */
+  		display: inline-block;
+  		background-color: $gold;
+      opacity: 1;
+
+  		/* these are the upper and lower lines in the menu icon */
+  		&::before, &:after {
+  			content: '';
+  			width: 100%;
+  			height: 100%;
+  			position: absolute;
+  			background-color: $gold;
+  			right: 0;
+        z-index: 120;
+        opacity: 1;
+
+  			-webkit-transition: -webkit-transform .3s, top .3s, background-color 0s;
+  			-moz-transition: -moz-transform .3s, top .3s, background-color 0s;
+  			transition: transform .3s, top .3s, background-color 0s;
+  		}
+
+  		&::before {
+  			top: -8px;
+  		}
+
+  		&::after {
+  			top: 8px;
+  		}
+
+  		&.is-clicked {
+  			background-color: transparent;
+
+  			&::before, &::after {
+  				background-color: $gold;
+  			}
+
+  			&::before {
+  				top: 0;
+  				@include transform(rotate(135deg));
+  			}
+
+  			&::after {
+  				top: 0;
+  				@include transform(rotate(225deg));
+  			}
+  		}
+  	}
+
+
+    &.is-open{
+      @include transform(translateY(0));
+      margin-right: -1.5rem;
     }
   }
 }
