fixed contact section height

--- a/_sass/_media-queries.scss
+++ b/_sass/_media-queries.scss
@@ -56,6 +56,10 @@
     min-height: 100%;
   }
 
+  .section-contact .section-left{
+    height: auto;
+  }
+
   .section-content,
   .section-full{
     min-height: 100%;
