--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -4,7 +4,7 @@
   min-height: 100%;
   min-height: 100vh;
   background-color: $light-tan;
-  overflow-x: hidden;
+  // overflow-x: hidden;
   position: relative;
 
   &:after{ //clearfix
@@ -88,6 +88,7 @@
 
     &-text{
       margin: 0 auto;
+      z-index: 5;
 
       button{
         margin-top: 1.5rem;
