--- a/_sass/_media-queries.scss
+++ b/_sass/_media-queries.scss
@@ -45,7 +45,6 @@
     box-shadow: none;
     &-image{
       width: 60%;
-      margin-bottom: 4rem;
     }
   }
 
@@ -54,6 +53,10 @@
     width: 100%;
     float: none;
     min-height: 100%;
+  }
+
+  .section-right{
+    padding: 2rem 0;
   }
 
   .section-contact .section-left{
@@ -127,5 +130,11 @@
 @media (min-width:1441px) {
   .section-left{
     background-image:url(/images/paper1920.png);
+  }
+}
+
+@media (max-height: 490px){
+  .scroll-pointer{
+    display: none;
   }
 }
