--- a/_includes/head.html
+++ b/_includes/head.html
@@ -3,7 +3,7 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1">
 
-  <title>Revolution Game House</title>
+  <title>Revolution Cafe</title>
   <meta name="description" content="{{ site.description }}">
   <link href="https://fonts.googleapis.com/css?family=IM+Fell+Double+Pica:400,400i" rel="stylesheet">
   <link href="https://cdn.rawgit.com/michalsnik/aos/2.0.4/dist/aos.css" rel="stylesheet">
