--- a/_includes/head.html
+++ b/_includes/head.html
@@ -8,7 +8,7 @@
   <link href="https://fonts.googleapis.com/css?family=IM+Fell+Double+Pica:400,400i" rel="stylesheet">
   <link href="https://cdn.rawgit.com/michalsnik/aos/2.0.4/dist/aos.css" rel="stylesheet">
 
-  <link rel="stylesheet" href="{{ "/css/main.css" | prepend: site.baseurl }}">
+  <link rel="stylesheet" href="/css/main.css">
 
   <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
   <link rel="icon" type="image/png" href="/favicon-32x32.png" sizes="32x32">
